--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,135 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+#container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  min-height: 620px;
+}
+
+.item {
+  margin: 10px 0;
+}
+
+#clock {
+  color: white;
+  font-size: 115px;
+  text-align: center;
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.4);
+  text-shadow: -2px -1px rgba(0, 0, 0, 0.4), 3px 2px rgba(0, 0, 0, 0.4), 5px 6px rgba(0, 0, 0, 0.4), 5px 6px rgba(0, 0, 0, 0.4);
+}
+
+#weather {
+  color: white;
+  font-size: 21px;
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
+}
+
+#weather img {
+  width: 30px;
+  /* background-color: rgba(200, 200, 200, 0.3); */
+  vertical-align: text-top;
+}
+
+#login-form {
+  font-size: 0;
+  line-height: 0;
+}
+
+#login-form input, #todo-form input {
+  width: 500px;
+  height: 30px;
+  padding: 10px;
+  border: 1px solid rgba(255,255,255, 0.1);
+  background-color: rgba(0,0,0,0.1);
+  font-size: 25px;
+  color: blanchedalmond;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+#login-form input[type=text]::placeholder, #todo-form input::placeholder {
+  color: blanchedalmond;
+  font-style: italic;
+}
+
+#login-form input[type=text] {
+  width: 340px;
+}
+
+#login-form input[type=submit] {
+  width: 145px;
+  box-sizing: content-box;
+  transition-duration: 0.3s;
+}
+
+#login-form input[type=submit]:hover {
+  color: white;
+  font-weight: bold;
+  box-shadow: 3px 3px 3px black;
+  cursor: pointer;
+}
+
+#greeting {
+  color: white;
+  font-size: 50px;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+}
+
+#todo-list {
+  overflow-x: hidden;
+  overflow-y: scroll;
+  width: 500px;
+  max-height: 130px;
+  padding: 10px;
+  border: 1px solid rgba(255,255,255, 0.1);
+  background-color: rgba(0,0,0,0.1);
+  color: white;
+  font-size: 21px;
+  text-shadow: -1px 0px black, 0px 1px black, 1px 0px black, 0px -1px black;
+}
+
+#todo-list::-webkit-scrollbar {
+  width: 10px;
+}
+#todo-list::-webkit-scrollbar-thumb {
+  background-color: #2f3542;
+  background-clip: padding-box;
+  border: 1px solid transparent;
+}
+#todo-list::-webkit-scrollbar-track {
+  background-color: grey;
+}
+
+#todo-list button {
+  border: none;
+  background-color: transparent;
+  transition-duration: 0.3s;
+}
+
+#todo-list button:hover {
+  box-shadow: 3px 3px 3px black;
+  cursor: pointer;
+}
+
+#quote {
+  font-size: 21px;
+  font-style: italic;
+  color: white;
+  text-align: center;
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
+}
+
 .hidden {
   display: none;
 }
