--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,6 @@ body {
   color: white;
   font-size: 115px;
   text-align: center;
-  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.4);
   text-shadow: -2px -1px rgba(0, 0, 0, 0.4), 3px 2px rgba(0, 0, 0, 0.4), 5px 6px rgba(0, 0, 0, 0.4), 5px 6px rgba(0, 0, 0, 0.4);
 }
 
@@ -128,6 +127,24 @@ body {
   color: white;
   text-align: center;
   text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.3);
+}
+
+#logout-button {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  border: none;
+  background-color: transparent;
+  color: white;
+  font-size: 24px;
+  font-style: italic;
+  text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.4);
+  transition-duration: 0.3s;
+}
+
+#logout-button:hover {
+  text-shadow: -1px -1px rgba(0, 0, 0, 0.4), 2px 1px rgba(0, 0, 0, 0.4), 4px 4px rgba(0, 0, 0, 0.4), 4px 4px rgba(0, 0, 0, 0.4);
+  cursor: pointer;
 }
 
 .hidden {
